--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 html, body {
     font-size: 18px;
+    font-family: "Roboto";
 }
 
 ul {
@@ -29,6 +30,7 @@ input, textarea, button, select {
     --gray-100: #2a2f32;
     --dark-blue: #131c20;
     --dark-blue-500: #323739;
+    --border-gray: rgba(241, 242, 242, 0.11);
 }
 
 /* Style */
@@ -41,8 +43,8 @@ input, textarea, button, select {
 }
 .wrapper {
     display: grid;
-    grid-template-columns: 30% auto;
-    grid-template-rows: 72px auto;
+    grid-template-columns: max(30%, 340px) auto;
+    grid-template-rows: 59px auto;
     grid-template-areas:
         "tl tr"
         "side content"
@@ -62,7 +64,7 @@ header.tl {
     min-width: 340px;
 }
 header.tr {
-    border-left: 1px solid var(--gray);
+    border-left: 1px solid var(--border-gray);
     background: red;
     grid-area: tr;
     background: var(--gray-100);
@@ -77,7 +79,7 @@ header.tr {
 }
 .contact p {
     margin-left: 15px;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 .tr .icons {
     margin-right: 15px;
@@ -96,7 +98,7 @@ header.tr {
     margin-right: 15px;
 }
 .icons div > img {
-    height: 1.7rem;
+    height: 1.4rem;
     fill: var(--gray);
     cursor: pointer;
 }
@@ -112,7 +114,7 @@ header.tr {
 }
 
 .side .search {
-    height: 69px;
+    height: 49px;
     background: var(--dark-blue);
     display: flex;
     align-items: center;
@@ -120,7 +122,7 @@ header.tr {
 }
 .side .search .boxInput {
     background: var(--dark-blue-500);
-    height: 45px;
+    height: 35px;
     width: 100%;
     margin: 5px 16px;
     border-radius: 22px;
@@ -138,8 +140,8 @@ header.tr {
 .side .search .boxInput input {
     display: flex;
     height: 100%;
-    width: 80%;
+    width: max(220px, 20vw);
     background: var(--dark-blue-500);
     border: 0;
-    font-size: 1rem;
+    font-size: .8rem;
 }
