--- a/style.css
+++ b/style.css
@@ -22,6 +22,28 @@ input, textarea, button, select {
     outline: 0;
 }
 
+/* scrollbar */
+/* width */
+::-webkit-scrollbar {
+    width: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: var(--bg);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: var(--dark-blue-500);
+    height: 20px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: var(--dark-blue-500);
+}
+
 /* root */
 :root {
     --bg : #0d1317;
@@ -50,7 +72,6 @@ input, textarea, button, select {
         "side content"
     ;
     width: 100%;
-    height: 100%;
 }
 
 header.tl {
@@ -119,6 +140,7 @@ header.tr {
     display: flex;
     align-items: center;
     width: 100%;
+    border-bottom: 1px solid var(--border-gray);
 }
 .side .search .boxInput {
     background: var(--dark-blue-500);
@@ -144,4 +166,91 @@ header.tr {
     background: var(--dark-blue-500);
     border: 0;
     font-size: .8rem;
+    color: var(--gray);
+}
+
+.side .contactList {
+    display: flex;
+    flex-direction: column;
+    height: calc(100vh - 108px);
+    overflow-y: scroll;
+}
+
+.side .contactList .contato {
+    display: flex;
+    align-items: center;
+    height: 72px;
+    background-color: transparent;
+    transition: background-color .2s;
+}
+.side .contactList .contato:hover {
+    cursor: pointer;
+    background-color: var(--gray-100);
+}
+.side .contactList .contato:hover > .infoContato .ultimaMensagem .iconDropdown .bullet {
+    left: 0;
+}
+
+.side .contactList .contato .fotoContato {
+    width: 49px;
+    height: 49px;
+    background: var(--gray);
+    border-radius: 100%;
+    margin: 0 15px;
+    flex: none;
+}
+.side .contactList .contato .infoContato {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    border-bottom: 1px solid var(--border-gray);
+    padding: 15px 10px 15px 0;
+}
+.side .contactList .contato .infoContato .nomeHora {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+.side .contactList .contato .infoContato .nomeHora .nome {
+    font-size: 1rem;
+}
+.side .contactList .contato .infoContato .nomeHora .hora {
+    font-size: .7rem;
+}
+
+.side .contactList .contato .infoContato .ultimaMensagem {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+.side .contactList .contato .infoContato .ultimaMensagem .mensagem {
+    font-size: .8rem;
+    margin-top: 5px;
+    display: flex;
+}
+.side .contactList .contato .infoContato .ultimaMensagem .mensagem span.iconChecked {
+    display: inline-block;
+    background: var(--gray);
+    width: 15px;
+    height: 15px;
+    border-radius: 5px;
+    margin-right: 7px;
+}
+.side .contactList .contato .infoContato .ultimaMensagem .iconDropdown {
+    width: 15px;
+    height: 15px;
+    position: relative;
+    overflow: hidden;
+}
+.side .contactList .contato .infoContato .ultimaMensagem .text {
+    font-size: .7rem;
+}
+.side .contactList .contato .infoContato .ultimaMensagem .iconDropdown .bullet {
+    background: var(--gray);
+    width: 15px;
+    height: 15px;
+    border-radius: 5px;
+    position: absolute;
+    left: 16px;
+    transition: left 0.1s;
 }
