--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ input, textarea, button, select {
     --gray: #b1b3b5;
     --gray-100: #2a2f32;
     --dark-blue: #131c20;
+    --dark-blue-200: #1e2428;
     --dark-blue-500: #323739;
     --border-gray: rgba(241, 242, 242, 0.11);
 }
@@ -253,4 +254,59 @@ header.tr {
     position: absolute;
     left: 16px;
     transition: left 0.1s;
+}
+
+/* content */
+.content {
+    grid-area: content;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto 62px;
+    border-left: 1px solid var(--border-gray);
+    grid-template-areas:
+        "historico"
+        "form"
+    ;
+}
+.content .historico {
+    grid-area: historico;
+}
+.content .form {
+    grid-area: form;
+    display: flex;
+    align-items: center;
+    padding: 0 20px;
+    width: 100%;
+    justify-content: space-between;
+    background-color: var(--dark-blue-200);
+}
+.content .form .iconsPost,
+.content .form .formPost {
+    display: flex;
+    grid-gap: 15px;
+    height: 100%;
+    align-items: center;
+}
+.content .form .icon-post > img {
+    height: 1.4rem;
+    fill: var(--gray);
+    cursor: pointer;
+}
+.content .inputForm {
+    background-color: var(--gray-100);
+    height: 65%;
+    display: flex;
+    align-items: center;
+    width: max(58vw, 200px);
+    border-radius: 28px;
+    padding: 0 15px;
+}
+.content .inputForm input {
+    display: flex;
+    height: 50%;
+    width: 100%;
+    color: var(--gray);
+    background-color: var(--gray-100);
+    border: 0;
+    font-size: .8rem;
 }
